# Jarvis-mcpm

./: .claude.json.backup  .env.backup  .env.template  .gitignore  .pre-commit-config.yaml  =6.0  AGENTS.md  ARCHITECTURE-MAP.md  CLAUDE.md  GEMINI.md  MCP-MASTER.md  MCP-MASTER.md.backup-1763252098  MCPM-ARCHITECTURE-MAP.md  PHASE2-FIXES.md  README.md  README.md.bak  ROADMAP.yaml  app.py  cipher.yml  cipher_routing_middleware.py  docker-compose.yml  generate_catalog_db.py  get-pip.py  health-config.env  mcp-manager.sh  mcpjungle.db  package-lock.json  package.json  possible-next-steps.md  pyproject.toml  pyproject.toml.backup  recovered-conversation-metamcp.md  temp_claude.json  temp_gemini.json  test_catalog.py  universal-tools.json  update_configs.py  uv.lock.backup
.github/: copilot-instructions.md  dependabot.yml
Jarvis/: .golangci.yml  Dockerfile  Makefile  PREVIEW_NEW_BORDERS.md  README.md  go.mod  go.sum  llm.txt  main.go  main_test.go  smoke_integration.go  tools.go  tools_test.go
MCPM/: FORK_DETAILS.md  MCPM-ARCHITECTURE-MAP.md  README.md  index.js  package-lock.json  package.json
archive/: cleanup-candidates-20251112-2310.txt  cleanup-todo-20251112-2327.md
config-templates/: claude-code-http.json  claude-code-sse.json  opencode.json
data/: cipher-sessions.db-shm  cipher-sessions.db-wal  routing_decisions.db
docs/: API_REFERENCE.md  BRANCH_PROTECTION.md  BRAND_STRATEGY.md  CONFIGURATION_STRATEGY.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  EXAMPLES.md  FAQ.md  INFORMATION-ARCHITECTURE.md  MCPM-documentation.md  PHASE0-RESEARCH-PLAN.md  REFACTOR_PLAN.md  (+13 more)
(+269 files in other folders)
