[project]
name = "cipher-aggregator"
version = "0.1.0"
description = "MCP server aggregator with intelligent routing and tool orchestration"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-semantic-conventions>=0.41b0",
]
